js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-else-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
if
(
false
)
{
}
else
{
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
