js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-not-extensible-args.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
